--- a/ITDoctor/index.html
+++ b/ITDoctor/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
    <p>Git + GitHub</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, doloribus!</p>
 </body>
 </html>
