перша гілка develop

--- a/ITDoctor/index.html
+++ b/ITDoctor/index.html
@@ -10,5 +10,7 @@
 <body>
    <p>Git + GitHub</p>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, doloribus!</p>
+   Lorem ipsum dolor sit amet.
+   <p>перша гілка develop</p>
 </body>
 </html>
