--- a/ITDoctor/index.html
+++ b/ITDoctor/index.html
@@ -12,5 +12,6 @@
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, doloribus!</p>
    Lorem ipsum dolor sit amet.
    <p>перша гілка develop</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, dolorum?</p>
 </body>
 </html>
